--- a/Example/app/src/main/res/layout/activity_search.xml
+++ b/Example/app/src/main/res/layout/activity_search.xml
@@ -2,6 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
     <include layout="@layout/activity_callout_view" />
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        android:queryHint="请输入搜索内容" />
 </RelativeLayout>
